tests: Introduce virpcitest
Among with this test introduce virpcimock as we need to mock some
syscalls, e.g. redirect open() of a file under /sys/bus/pci to a
stub sysfs tree.

Signed-off-by: Michal Privoznik <mprivozn@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -212,6 +212,7 @@
 /tests/virlockspacetest
 /tests/virlogtest
 /tests/virnet*test
+/tests/virpcitest
 /tests/virportallocatortest
 /tests/virshtest
 /tests/virstoragetest
