--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -2118,6 +2118,12 @@ fi
 %endif
 
 %changelog
+* Mon Nov  4 2013 Daniel Veillard <veillard@redhat.com> - 1.1.4-1
+- Add support for AArch64 architecture
+- Various improvements on test code and test driver
+- 4 security bug fixes
+- a lot of bug fixes and various improvements
+
 * Tue Oct  1 2013 Daniel Veillard <veillard@redhat.com> - 1.1.3-1
 - VMware: Initial VMware Fusion support and various improvements
 - libvirt: add new public API virConnectGetCPUModelNames
