--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -2004,6 +2004,9 @@ fi
 %endif
 
 %changelog
+* Wed Nov 06 2013 Cole Robinson <crobinso@redhat.com> - 1.0.5.7-1
+- Maintenance release 1.0.5.7
+
 * Fri Sep 20 2013 Cole Robinson <crobinso@redhat.com> - 1.0.5.6-1
 - Maintenance release 1.0.5.6
 
