--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -2118,6 +2118,9 @@ fi
 %endif
 
 %changelog
+* Wed Nov 06 2013 Cole Robinson <crobinso@redhat.com> - 1.1.3.1-1
+- Maintenance release 1.1.3.1
+
 * Tue Oct  1 2013 Daniel Veillard <veillard@redhat.com> - 1.1.3-1
 - VMware: Initial VMware Fusion support and various improvements
 - libvirt: add new public API virConnectGetCPUModelNames
