tests: Distribute virpcitestdata
Since 21685c955e5466 we have tests/virpcitestdata dir containing the PCI
config files for some dummy PCI devices that are used int virpcitest.
However, the directory containing the config files is not distributed
making 'make rpm' fail.

Signed-off-by: Michal Privoznik <mprivozn@redhat.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -107,6 +107,7 @@ EXTRA_DIST =		\
 	sysinfodata \
 	test-lib.sh	\
 	virsh-uriprecedence \
+	virpcitestdata \
 	vmx2xmldata \
 	xencapsdata \
 	xmconfigdata \
