docs: grammar fixes
Fix some user-visible wording from commits 72aafe9 and 1606d89.

* src/qemu/qemu.conf (migration_address): Better wording.
* include/libvirt/libvirt.h.in (VIR_MIGRATE_PARAM_LISTEN_ADDRESS):
Likewise.

Signed-off-by: Eric Blake <eblake@redhat.com>

--- a/include/libvirt/libvirt.h.in
+++ b/include/libvirt/libvirt.h.in
@@ -1274,10 +1274,10 @@ typedef enum {
  * VIR_MIGRATE_PARAM_LISTEN_ADDRESS:
  *
  * virDomainMigrate* params field: The listen address that hypervisor on the
- * destination side should bind to for incoming migration. Both, IPv4 and IPv6
+ * destination side should bind to for incoming migration. Both IPv4 and IPv6
  * addresses are accepted as well as hostnames (the resolving is done on
- * destination). Some hypervisors do not support this feature an will return an
- * error if this field is used.
+ * destination). Some hypervisors do not support this feature and will return
+ * an error if this field is used.
  */
 #define VIR_MIGRATE_PARAM_LISTEN_ADDRESS    "listen_address"
 
