--- a/tools/libvirt-guests.service.in
+++ b/tools/libvirt-guests.service.in
@@ -1,6 +1,6 @@
 [Unit]
 Description=Suspend Active Libvirt Guests
-After=syslog.target network.target
+After=network.target
 
 [Service]
 EnvironmentFile=-/etc/sysconfig/libvirt-guests
