--- a/include/libvirt/libvirt.h.in
+++ b/include/libvirt/libvirt.h.in
@@ -2503,7 +2503,7 @@ int virDomainBlockCommit(virDomainPtr dom, const char *disk, const char *base,
 /**
  * VIR_DOMAIN_BLOCK_IOTUNE_READ_BYTES_SEC:
  *
- * Macro for the BlockIoTune tunable weight: it repersents the read
+ * Macro for the BlockIoTune tunable weight: it represents the read
  * bytes per second permitted through a block device, as a ullong.
  */
 #define VIR_DOMAIN_BLOCK_IOTUNE_READ_BYTES_SEC "read_bytes_sec"
@@ -2511,7 +2511,7 @@ int virDomainBlockCommit(virDomainPtr dom, const char *disk, const char *base,
 /**
  * VIR_DOMAIN_BLOCK_IOTUNE_WRITE_BYTES_SEC:
  *
- * Macro for the BlockIoTune tunable weight: it repersents the write
+ * Macro for the BlockIoTune tunable weight: it represents the write
  * bytes per second permitted through a block device, as a ullong.
  */
 #define VIR_DOMAIN_BLOCK_IOTUNE_WRITE_BYTES_SEC "write_bytes_sec"
@@ -2519,7 +2519,7 @@ int virDomainBlockCommit(virDomainPtr dom, const char *disk, const char *base,
 /**
  * VIR_DOMAIN_BLOCK_IOTUNE_TOTAL_IOPS_SEC:
  *
- * Macro for the BlockIoTune tunable weight: it repersents the total
+ * Macro for the BlockIoTune tunable weight: it represents the total
  * I/O operations per second permitted through a block device, as a ullong.
  */
 #define VIR_DOMAIN_BLOCK_IOTUNE_TOTAL_IOPS_SEC "total_iops_sec"
@@ -2527,14 +2527,14 @@ int virDomainBlockCommit(virDomainPtr dom, const char *disk, const char *base,
 /**
  * VIR_DOMAIN_BLOCK_IOTUNE_READ_IOPS_SEC:
  *
- * Macro for the BlockIoTune tunable weight: it repersents the read
+ * Macro for the BlockIoTune tunable weight: it represents the read
  * I/O operations per second permitted through a block device, as a ullong.
  */
 #define VIR_DOMAIN_BLOCK_IOTUNE_READ_IOPS_SEC "read_iops_sec"
 
 /**
  * VIR_DOMAIN_BLOCK_IOTUNE_WRITE_IOPS_SEC:
- * Macro for the BlockIoTune tunable weight: it repersents the write
+ * Macro for the BlockIoTune tunable weight: it represents the write
  * I/O operations per second permitted through a block device, as a ullong.
  */
 #define VIR_DOMAIN_BLOCK_IOTUNE_WRITE_IOPS_SEC "write_iops_sec"
