docs: improve job info details
Noticed while revieweing the patches for qemu's new migration state.

* include/libvirt/libvirt.h.in (_virDomainJobInfo): Fix typo,
grammar.
* src/libvirt.c (virDomainGetJobInfo): Add cross reference.

Signed-off-by: Eric Blake <eblake@redhat.com>

--- a/include/libvirt/libvirt.h.in
+++ b/include/libvirt/libvirt.h.in
@@ -4067,20 +4067,20 @@ struct _virDomainJobInfo {
     /* One of virDomainJobType */
     int type;
 
-    /* Time is measured in mill-seconds */
+    /* Time is measured in milliseconds */
     unsigned long long timeElapsed;    /* Always set */
     unsigned long long timeRemaining;  /* Only for VIR_DOMAIN_JOB_BOUNDED */
 
     /* Data is measured in bytes unless otherwise specified
-     * and is measuring the job as a whole
+     * and is measuring the job as a whole.
      *
      * For VIR_DOMAIN_JOB_UNBOUNDED, dataTotal may be less
      * than the final sum of dataProcessed + dataRemaining
      * in the event that the hypervisor has to repeat some
-     * data eg due to dirtied pages during migration
+     * data, such as due to dirtied pages during migration.
      *
      * For VIR_DOMAIN_JOB_BOUNDED, dataTotal shall always
-     * equal sum of dataProcessed + dataRemaining
+     * equal the sum of dataProcessed + dataRemaining.
      */
     unsigned long long dataTotal;
     unsigned long long dataProcessed;
